# tools42

./: .gitignore  dev.py
src/tally42/: Cargo.toml  README.org  tools42_build.toml
src/tally42/migrations/: 0001_add_accounts_table.sql  0002_accounts_redef.sql  0003_create_statements_table.sql  0004_create_transactions_and_postings_tables.sql
src/tally42/src/: account.rs  db.rs  main.rs  manager.rs  migration.rs  model.rs  statement.rs  user_data.rs
src/tally42/src/core/: account.rs  core_api.rs  db.rs  migration.rs  mod.rs  statement.rs  transaction.rs  user_data.rs
src/tally42/tally42-el/: tally42.el
src/tli42/: Cargo.toml  README.org  tools42_build.toml
src/tli42/examples/: basic_repl.rs
src/tli42/src/: cmd.rs  editor.rs  lib.rs  main.rs  mode.rs  repl.rs  sm.rs  trie.rs
src/tli42/tests/: public_api_smoke.rs
