[package]
name = "tally42"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = { version = "1.35.0", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
time = { version = "0.3.36", features = ["serde", "parsing"] }
toml = "0.8.19"
walkdir = "2.5.0"
clap = { version = "4.5.31", features = ["derive"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
include_dir = "0.7.4"

[dev-dependencies]
tempfile = "3.18.0"
