[package]
name = "tally42"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
include_dir = "0.7.4"
uuid = { version = "1.21.0", features = ["v4"] }
sha2 = "0.10.9"

[dev-dependencies]
tempfile = "3.18.0"
